style: unify `ProductCards` - fix: product card hover shadow not showing - modify next link migration - remove extra css variables

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,15 +16,11 @@ body {
 	--oex-lightest-grey: #f2f0f0;
 	--oex-orange: #fe7624;
 	--oex-danger: #ea4237;
-	--oex-bg-danger: #fcf6f5;
 	--oex-success: #3f845f;
-	--oex-light-success: #f1fffa;
-	--oex-light-orange: #fdf6f2;
 	--oex-orange-mute: #ffe8da;
 	--oex-yellow: #edbf37;
 	--oex-orange-dark: #e74803;
 	--oex-bg-grey: #2e2e2e;
-	--border-radius: 12px;
 	--text-colour-light: white;
 	--text-colour-dark: #202020;
 	--text-colour-grey: #6d6a6a;
